--- a/application/modules/admin/views/scripts/article/form.phtml
+++ b/application/modules/admin/views/scripts/article/form.phtml
@@ -1,8 +1,12 @@
-
 <?php $this->headScript()->appendFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js')); ?>
 <?php $this->headScript()->appendFile($this->baseUrl('lib/tiny_mce/tiny_mce.js')); ?>
 <?php $this->headScript()->appendFile($this->baseUrl('lib/Tag-Handler/js/jquery.taghandler.js')); ?>
 <?php $this->headScript()->appendFile($this->baseUrl('js/SITi_admin.js')); ?>
+<?php $this->headScript()->appendScript("$(function(){
+  SITi_tinyMCE.init();
+  SITi_tag_handler.init();
+});")
+?>
 <form action="" method="post" enctype="multipart/form-data">
   <?php echo $this->form->title; ?>
   <div class="row-fluid">
