--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -120,7 +120,7 @@
               </a>
               <nav>
                 <div class="nav-collapse">
-                  <ul class="nav">
+<!--                  <ul class="nav">
                     <li class="dropdown">
                       <a data-toggle="dropdown" class="dropdown-toggle" href="#"> menu <b class="caret"></b></a>
                       <ul class="dropdown-menu">
@@ -145,7 +145,7 @@
                         <li><a href="#">menu section</a></li>
                       </ul>
                     </li>
-                  </ul>
+                  </ul>-->
                 </div>
               </nav>
             </div>
@@ -186,6 +186,7 @@
                           <li><a href="<?php echo $this->url(['controller' => 'article', 'action' => 'index']); ?>">Artikel</a></li>
                           <li><a href="<?php echo $this->url(['controller' => 'news', 'action' => 'index']); ?>">Berita</a></li>
                           <li><a href="<?php echo $this->url(['controller' => 'event', 'action' => 'index']); ?>">Kegiatan</a></li>
+                          <li><a href="<?php echo $this->url(['controller' => 'polling', 'action' => 'index']); ?>">Jajak Pendapat</a></li>
                           <li><a href="javascript:void(0)">Mading</a></li>
                           <li><a href="javascript:void(0)">Komentar</a></li>
                         </ul>
