--- a/application/modules/admin/views/scripts/user/login.phtml
+++ b/application/modules/admin/views/scripts/user/login.phtml
@@ -63,7 +63,7 @@
         <div class="btm_b clearfix">
           <?php echo $this->form->submit; ?>
           <span>
-            <a href="<?php echo $this->url(['module' => 'default', 'controller' => 'index', 'action' => 'index']); ?>">
+            <a href="<?php echo $this->url(array('module' => 'default', 'controller' => 'index', 'action' => 'index')); ?>">
               <i class="icon-chevron-left"></i> 
               Ke halaman depan
             </a>
