--- a/application/modules/admin/views/scripts/news/index.phtml
+++ b/application/modules/admin/views/scripts/news/index.phtml
@@ -3,7 +3,7 @@
   <div class="row-fluid" style="margin-bottom: 20px">
     <div class="pull-left">
       <h3 style="display: inline">Berita</h3>
-      <a href="<?php echo $this->url(['action' => 'create']); ?>" 
+      <a href="<?php echo $this->url(array('action' => 'create')); ?>" 
          class="btn btn-link label label-success">Posting Berita</a>
     </div>
     <div class="pull-right">
