--- a/application/modules/admin/views/scripts/account/index.phtml
+++ b/application/modules/admin/views/scripts/account/index.phtml
@@ -7,6 +7,7 @@
       <th>Nama Lengkap</th>
       <th>Email</th>
       <th>Role</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -19,6 +20,15 @@
         <td><?php echo $user->fullname; ?></td>
         <td><?php echo $user->email; ?></td>
         <td><?php echo $user->role; ?></td>
+        <td>
+          <a href="<?php echo $this->url(array('action' => 'edit', 'id' => $user->username)); ?>"
+             title="Sunting">
+            <i class="icon-edit"></i>
+          </a>
+          <a href="<?php echo $this->url(array('action' => 'delete', 'id' => $user->username)); ?>">
+            <i class="icon-trash"></i>
+          </a>
+        </td>
       </tr>
     <?php endforeach; ?>
   </tbody>
