Lowongan pekerjaan + update database

--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -46,7 +46,7 @@
       form select, select {
         margin-bottom: 0;
       }
-      
+
       .table thead th {
         vertical-align: middle;
       }
@@ -120,32 +120,32 @@
               </a>
               <nav>
                 <div class="nav-collapse">
-<!--                  <ul class="nav">
-                    <li class="dropdown">
-                      <a data-toggle="dropdown" class="dropdown-toggle" href="#"> menu <b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-                        <li><a href="#">menu section</a></li>
-                        <li><a href="#">menu section</a></li>
-                        <li><a href="#">menu section</a></li>
-                      </ul>
-                    </li>
-                    <li class="dropdown">
-                      <a data-toggle="dropdown" class="dropdown-toggle" href="#"> menu <b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-                        <li><a href="#">menu section</a></li>
-                        <li><a href="#">menu section</a></li>
-                        <li><a href="#">menu section</a></li>
-                      </ul>
-                    </li>
-                    <li class="dropdown">
-                      <a data-toggle="dropdown" class="dropdown-toggle" href="#"> menu <b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-                        <li><a href="#">menu section</a></li>
-                        <li><a href="#">menu section</a></li>
-                        <li><a href="#">menu section</a></li>
-                      </ul>
-                    </li>
-                  </ul>-->
+                  <!--                  <ul class="nav">
+                                      <li class="dropdown">
+                                        <a data-toggle="dropdown" class="dropdown-toggle" href="#"> menu <b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                          <li><a href="#">menu section</a></li>
+                                          <li><a href="#">menu section</a></li>
+                                          <li><a href="#">menu section</a></li>
+                                        </ul>
+                                      </li>
+                                      <li class="dropdown">
+                                        <a data-toggle="dropdown" class="dropdown-toggle" href="#"> menu <b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                          <li><a href="#">menu section</a></li>
+                                          <li><a href="#">menu section</a></li>
+                                          <li><a href="#">menu section</a></li>
+                                        </ul>
+                                      </li>
+                                      <li class="dropdown">
+                                        <a data-toggle="dropdown" class="dropdown-toggle" href="#"> menu <b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                          <li><a href="#">menu section</a></li>
+                                          <li><a href="#">menu section</a></li>
+                                          <li><a href="#">menu section</a></li>
+                                        </ul>
+                                      </li>
+                                    </ul>-->
                 </div>
               </nav>
             </div>
@@ -187,8 +187,10 @@
                           <li><a href="<?php echo $this->url(array('controller' => 'news', 'action' => 'index')); ?>">Berita</a></li>
                           <li><a href="<?php echo $this->url(array('controller' => 'event', 'action' => 'index')); ?>">Kegiatan</a></li>
                           <li><a href="<?php echo $this->url(array('controller' => 'polling', 'action' => 'index')); ?>">Jajak Pendapat</a></li>
-                          <li><a href="javascript:void(0)">Mading</a></li>
-                          <li><a href="javascript:void(0)">Komentar</a></li>
+<!--                          <li><a href="javascript:void(0)">Mading</a></li>
+                          <li><a href="javascript:void(0)">Komentar</a></li>-->
+                          <li><a href="<?php echo $this->url(array('controller' => 'jobs', 'action' => 'index')); ?>">Lowongan Kerja</a></li>
+                          <li><a href="<?php echo $this->url(array('controller' => 'account', 'action' => 'index')); ?>">Akun</a></li>
                         </ul>
                       </div>
                     </div>
