--- a/application/modules/admin/views/scripts/article/form.phtml
+++ b/application/modules/admin/views/scripts/article/form.phtml
@@ -12,22 +12,28 @@
   <div class="row-fluid">
     <div class="span8">
       <?php echo $this->form->content; ?>
-
-    </div>
-    <div class="span4">
-      <div class="control-group well">
-        <label for="">Tag</label>
+      <div class="control-group">
         <div class="controls">
           <?php echo $this->form->tags; ?>
-          <ul class="tags" style="background-color: #fff"></ul>
+          <div class="input-prepend">
+            <span class="add-on"><i class="icon-tags"></i></span>
+            <ul class="tags" style="background-color: #fff"></ul>
+            
+          </div>
           <span class="text text-info">Ketikan nama tag. Tekan Enter untuk menambahkan.</span>
         </div>
       </div>
-      <div class="control-group well">
-        <div class="controls">
-          <?php echo $this->form->submit; ?>
-          <?php echo $this->form->draft; ?>
-        </div>
+    </div>
+    <div class="span4">
+
+
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="control-group">
+      <div class="controls">
+        <?php echo $this->form->submit; ?>
+        <?php echo $this->form->draft; ?>
       </div>
     </div>
   </div>
