--- a/application/modules/admin/views/scripts/account/index.phtml
+++ b/application/modules/admin/views/scripts/account/index.phtml
@@ -1,35 +1,80 @@
 <?php echo $this->flashMessenger($this->messages); ?>
-<table class="table table-striped table-condensed">
-  <thead>
-    <tr>
-      <th></th>
-      <th>Nama User</th>
-      <th>Nama Lengkap</th>
-      <th>Email</th>
-      <th>Role</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <?php foreach ($this->users as $index => $user): ?>
-      <tr>
-        <td>
-          <?php echo $this->thumbnail('avatar', $user->avatar, 'no-avatar.jpg', 32, 32); ?>
-        </td>
-        <td><?php echo $user->username; ?></td>
-        <td><?php echo $user->fullname; ?></td>
-        <td><?php echo $user->email; ?></td>
-        <td><?php echo $user->role; ?></td>
-        <td>
-          <a href="<?php echo $this->url(array('action' => 'edit', 'id' => $user->username)); ?>"
-             title="Sunting">
-            <i class="icon-edit"></i>
-          </a>
-          <a href="<?php echo $this->url(array('action' => 'delete', 'id' => $user->username)); ?>">
-            <i class="icon-trash"></i>
-          </a>
-        </td>
-      </tr>
-    <?php endforeach; ?>
-  </tbody>
-</table>
+
+<form action="" method="post">
+  <div class="row-fluid">
+    <div class="pull-left">
+      <h3 style="display: inline">Akun</h3>
+      <a href="<?php echo $this->url(array('action' => 'create')); ?>" class="btn btn-link label label-success">
+        Buat Akun
+      </a>
+    </div>
+    <div class="pull-right">
+
+    </div>
+  </div>
+
+  <div class="row-fluid">
+    <div class="row-fluid">
+      <div class="pull-left">
+        <button class="btn btn-mini btn-danger"
+                name="action"
+                value="delete"
+                onclick="return confirm('Apakah anda yakin ingin menghapus semua akun yang dipilih?')">
+          <i class="icon-trash"></i>
+        </button>
+      </div>
+      <div class="pull-right">
+        <?php echo $this->paginationControl($this->users, 'sliding', 'partial/pagination_control.phtml'); ?>
+      </div>
+    </div>
+    <div class="row-fluid">
+      <table class="table table-striped table-condensed" id="account-table">
+        <thead>
+          <tr>
+            <th>
+              <input type="checkbox" onclick="
+                var checkboxes = $('#account-table tbody input:checkbox');
+                if($(this).attr('checked')) {
+                  $(checkboxes).attr('checked', true);
+                } else {
+                  $(checkboxes).removeAttr('checked');
+                }
+                     "/>
+            </th>
+            <th></th>
+            <th>Nama User</th>
+            <th>Nama Lengkap</th>
+            <th>Email</th>
+            <th>Role</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <?php foreach ($this->users as $index => $user): ?>
+            <tr>
+              <td><input type="checkbox" name="accounts[]" value="<?php echo $user->username; ?>" id="" /></td>
+              <td>
+                <?php echo $this->thumbnail('avatar', $user->avatar, 'no-avatar.jpg', 32, 32); ?>
+              </td>
+              <td><?php echo $user->username; ?></td>
+              <td><?php echo $user->fullname; ?></td>
+              <td><?php echo $user->email; ?></td>
+              <td><?php echo $user->role; ?></td>
+              <td>
+                <a href="<?php echo $this->url(array('action' => 'edit', 'id' => $user->username)); ?>"
+                   title="Sunting">
+                  <i class="icon-edit"></i>
+                </a>
+                <a href="<?php echo $this->url(array('action' => 'delete', 'id' => $user->username)); ?>"
+                   title="Hapus"
+                   onclick="return confirm('Hapus akun \'<?php echo $user->username ?>\'?')">
+                  <i class="icon-trash"></i>
+                </a>
+              </td>
+            </tr>
+          <?php endforeach; ?>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</form>
