--- a/application/modules/admin/views/scripts/polling/index.phtml
+++ b/application/modules/admin/views/scripts/polling/index.phtml
@@ -17,10 +17,10 @@ $control = $this->paginationControl($this->paginator, 'Sliding',
     <form action="" method="post" name="del">
       <div class="row-fluid">
         <div class="span2">
-          <button class="btn btn-mini" type="submit"
+          <button class="btn btn-mini btn-danger" type="submit"
                   name="delete"
                   onclick="if(!confirm(
-                    'Apakah anda yakin ingin menghapus ini ?'))
+                    'Apakah anda yakin ingin menghapus polling yang dipilih?'))
                     return false;">
             <i class="icon-trash"></i>
           </button>          
