--- a/application/modules/admin/views/scripts/prakerin/index.phtml
+++ b/application/modules/admin/views/scripts/prakerin/index.phtml
@@ -1,19 +1,2 @@
-<script type="text/javascript"
-        src="https://maps.googleapis.com/maps/api/js?sensor=false">
-</script>
-<script type="text/javascript">
-  $(function(){
-    var mapOptions = {
-      center: new google.maps.LatLng(-34.397, 150.644),
-      zoom: 8,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    }
-    var map = new google.maps.Map(document.getElementById("map_canvas"),mapOptions);
-  })
-</script>
-<style type="text/css">
-  html { height: 100% }
-  body { height: 100%; margin: 0; padding: 0 }
-  #map_canvas { height: 100% ;border:1px solid #ddd}
-</style>
-<div id="map_canvas" style="width: 100%;height: 100%"></div>
+<?php echo $this->flashMessenger($this->messages); ?>
+<a href="<?php echo $this->url(array('action' => 'create')); ?>">Tambah Baru</a>
