--- a/application/modules/admin/views/scripts/prakerin/edit.phtml
+++ b/application/modules/admin/views/scripts/prakerin/edit.phtml
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <h3>Tambah Info Prakerin</h3>
+  <h3>Sunting Info Prakerin</h3>
 </div>
 <div class="row-fluid">
   <?php echo $this->render('prakerin/form.phtml'); ?>
