--- a/application/modules/admin/views/scripts/prakerin/index.phtml
+++ b/application/modules/admin/views/scripts/prakerin/index.phtml
@@ -1,2 +1,169 @@
+<?php
+$key = "AIzaSyCTNj8ia2gmUviCAL5Beyrip_OQSI_hJdw";
+$sensor = "false";
+$libraries = "places";
+
+$this->headScript()
+        ->prependFile("https://maps.googleapis.com/maps/api/js?key={$key}&sensor={$sensor}&libraries={$libraries}")
+        ->prependFile($this->baseUrl('lib/multiselect/jquery.multiselect.js'))
+        ->prependFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js'))
+        ->appendFile($this->baseUrl('js/prakerin/index.js'));
+
+$this->headLink()
+        ->appendStylesheet($this->baseUrl('lib/multiselect/jquery.multiselect.css'));
+?>
 <?php echo $this->flashMessenger($this->messages); ?>
-<a href="<?php echo $this->url(array('action' => 'create')); ?>">Tambah Baru</a>
+<form action="" method="post">
+  <div class="row-fluid" style="margin-bottom: 25px;">
+    <div class="pull-left">
+      <h3 style="display: inline">Info Prakerin</h3>
+      <a href="<?php echo $this->url(array('action' => 'create')); ?>"
+         class="btn btn-link label label-success">Tambah Baru</a>
+    </div>
+    <div class="pull-right">
+      <?php
+      echo $this->formSelect('filter[row]', $this->filter['row'], array(
+          'style' => 'width: 65px'), array(
+          5 => 5,
+          10 => 10,
+          25 => 25,
+          50 => 50,
+          100 => 100
+      ));
+      ?>
+      <button type="submit" class="btn" name="action" value="filter">
+        Set
+      </button>
+    </div>
+  </div>
+
+  <div class="row-fluid">
+    <div class="well">
+      <div id="map_canvas" style="height: 400px"></div>
+    </div>
+  </div>
+
+  <div class="row-fluid">
+    <div class="row-fluid">
+      <div class="pull-left">
+        <button type="submit" 
+                name="action"
+                value="delete"
+                class="btn btn-mini btn-danger"
+                onclick="return confirm('Apakah anda yakin ingin menghapus Info'+
+                    ' Prakerin yang dipilih?')">
+          <i class="icon-trash"></i>
+        </button>
+        <button type="submit"
+                class="btn btn-mini"
+                name="action"
+                value="filter">
+          <i class="icon-filter"></i>
+          Gunakan Filter
+        </button>
+        <button type="submit"
+                class="btn btn-mini"
+                name="action"
+                value="reset">
+          Atur Ulang Filter
+        </button>
+      </div>
+      <div class="pull-right">
+        <?php echo $this->paginationControl($this->paginator, 'sliding', 'partial/pagination_control.phtml'); ?>
+      </div>
+    </div>
+    <div class="row-fluid">
+      <table class="table table-striped table-condensed" id="prakerin-table">
+        <thead>
+          <tr>
+            <th>
+              <input type="checkbox"
+                     onclick="
+                       var checkboxes = $('#prakerin-table tbody input:checkbox');
+                       if($(this).attr('checked')) {
+                         $(checkboxes).attr('checked', true);
+                       } else {
+                         $(checkboxes).removeAttr('checked');
+                       }  
+                     "/>
+            </th>
+            <th>Nama Perusahaan</th>
+            <th>Alamat</th>
+            <th>Kategori Jurusan</th>
+            <th>Website</th>
+            <th>Kontak</th>
+            <th></th>
+          </tr>
+          <tr>
+            <th></th>
+            <th>
+              <?php
+              echo $this->formText('filter[name]', $this->filter['name'], array(
+                  'class' => 'span12',
+                  'placeholder' => 'Pencarian berdasarkan nama perusahaan.'
+              ));
+              ?>
+            </th>
+            <th>
+              <?php
+              echo $this->formText('filter[address]', $this->filter['address'], array(
+                  'class' => 'span12',
+                  'placeholder' => 'Pencarian berdasarkan alamat.'
+              ));
+              ?>
+            </th>
+            <th>
+              <?php
+              echo $this->formSelect('filter[category][]', isset($this->filter['category']) ? $this->filter['category'] : null, array(), array(
+                  'RPL' => 'Rekayasa Perangkat Lunak',
+                  'TKJ' => 'Teknik Komputer Jaringan',
+                  'MM' => 'Multimedia',
+                  'TOI' => 'Teknik Otomasi Industri',
+                  'TITL' => "Teknik Instalasi Tenaga Listrik",
+                  'AV' => "Teknik Audio Video"
+              ));
+              ?>
+            </th>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <?php foreach ($this->paginator as $index => $prakerin): ?>
+            <tr>
+              <td>
+                <input type="checkbox" name="prakerin[]"
+                       value="<?php echo $prakerin->id; ?>"/>
+              </td>
+              <td>
+                <a href="#">
+                  <strong><?php echo $prakerin->name; ?></strong>
+                </a>
+              </td>
+              <td><?php echo $prakerin->address; ?></td>
+              <td><?php echo $prakerin->category; ?></td>
+              <td>
+                <a href="<?php echo $prakerin->website; ?>" target="_blank">
+                  <?php echo $prakerin->website; ?>
+                </a>
+              </td>
+              <td><?php echo $prakerin->contact; ?></td>
+              <td>
+                <a href="<?php echo $this->url(array('action' => 'edit', 'id' => $prakerin->id)); ?>"
+                   title="Sunting">
+                  <i class="icon-edit"></i>
+                </a>
+                <a href="<?php echo $this->url(array('action' => 'delete', 'id' => $prakerin->id)); ?>"
+                   title="Hapus"
+                   onclick="return confirm('Apakah anda yakin?')">
+                  <i class="icon-trash"></i>
+                </a>
+              </td>
+            </tr>
+          <?php endforeach; ?>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</form>
