--- a/public/lib/gebo/css/style.css
+++ b/public/lib/gebo/css/style.css
@@ -867,3 +867,22 @@ ul.tags.tagHandlerContainer {
   top: -8px;
   height: 30px;
 }
+
+
+/*edited*/
+#map-canvas {
+  width:100%;
+  height: 400px;
+}
+
+/* google maps */    
+.company_add_form legend {margin-bottom:10px;font-size:15px}
+#map-canvas img { max-width: none; }
+#map-canvas label {display:inline;margin:0;color:#000;font-size: 11px;line-height:normal}
+
+.ui-multiselect-checkboxes label input {
+  position: relative;
+  top: -1px;
+  margin: 0;
+  margin-right: 2px;
+}
