--- a/application/modules/admin/views/scripts/prakerin/index.phtml
+++ b/application/modules/admin/views/scripts/prakerin/index.phtml
@@ -38,7 +38,7 @@ $this->headLink()
   </div>
 
   <div class="row-fluid">
-    <div class="well">
+    <div class="well hide" id="map">
       <div id="map_canvas" style="height: 400px"></div>
     </div>
   </div>
@@ -53,6 +53,13 @@ $this->headLink()
                 onclick="return confirm('Apakah anda yakin ingin menghapus Info'+
                     ' Prakerin yang dipilih?')">
           <i class="icon-trash"></i>
+        </button>
+        <button class="btn btn-mini btn-info" 
+                data-toggle="button"
+                type="button"
+                onclick="$('#map').slideToggle(200)">
+          <i class="icon-map-marker"></i>
+          Tampilkan Peta
         </button>
         <button type="submit"
                 class="btn btn-mini"
