--- a/application/modules/admin/views/scripts/prakerin/index.phtml
+++ b/application/modules/admin/views/scripts/prakerin/index.phtml
@@ -4,10 +4,11 @@ $sensor = "false";
 $libraries = "places";
 
 $this->headScript()
-        ->prependFile("https://maps.googleapis.com/maps/api/js?key={$key}&sensor={$sensor}&libraries={$libraries}")
-        ->prependFile($this->baseUrl('lib/multiselect/jquery.multiselect.js'))
-        ->prependFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js'))
-        ->appendFile($this->baseUrl('js/prakerin/index.js'));
+->prependFile("https://maps.googleapis.com/maps/api/js?key={$key}&sensor={$sensor}&libraries={$libraries}")
+->prependFile($this->baseUrl('lib/multiselect/jquery.multiselect.js'))
+->prependFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js'))
+->appendFile('http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerwithlabel/1.0.1/src/markerwithlabel_packed.js')
+->appendFile($this->baseUrl('js/prakerin/index.js'));
 
 $this->headLink()
         ->appendStylesheet($this->baseUrl('lib/multiselect/jquery.multiselect.css'));
@@ -81,6 +82,13 @@ $this->headLink()
     </div>
     <div class="row-fluid">
       <table class="table table-striped table-condensed" id="prakerin-table">
+        <col width="1%" />
+        <col width="30%" />
+        <col width="30%" />
+        <col width="10%" />
+        <col width="10%" />
+        <col width="15%" />
+        <col width="6%" />
         <thead>
           <tr>
             <th>
