--- a/application/modules/admin/views/scripts/gallery/index.phtml
+++ b/application/modules/admin/views/scripts/gallery/index.phtml
@@ -1,11 +1,4 @@
-<style type="text/css">
-  .main-content {
-    background-color:#F7F7F7;
-  }
-  #maincontainer {
-    background-color:#F7F7F7;
-  }
-</style>
+<?php $this->headLink()->appendStylesheet($this->baseUrl('lib/css/gallery/index.css')); ?>
 <div class="row-fluid">
   <h3 style="display: inline">Galeri</h3>
   <a class="btn btn-link btn-mini label label-success"
