--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,19 +1,415 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-  <head>
-    <meta charset="UTF-8">
-     <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap.css')); ?>
-    <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap-responsive.css')); ?>
-    <?php $this->headScript()->prependFile($this->baseUrl('lib/jquery/jquery-1.8.3.js')); ?>
+    <head>
+        <meta charset="UTF-8">
+        <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap.css')); ?>
+        <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap-responsive.css')); ?>
+        <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/bootstrap/css/prettify.css')); ?>
+        <?php $this->headLink()->appendStylesheet($this->baseUrl('lib/bootstrap/css/docs.css')); ?>
+        <?php $this->headScript()->prependFile($this->baseUrl('lib/jquery/jquery-1.8.3.js')); ?>
+        <?php $this->headScript()->appendFile($this->baseUrl('lib/bootstrap/js/bootstrap.js')); ?>
 
-    <?php $this->headScript()->appendFile($this->baseUrl('lib/bootstrap/js/bootstrap.js')); ?>
-    
-    <?php echo $this->headLink(); ?>
-    <?php echo $this->headScript(); ?>
-    
-    <title></title>
-  </head>
-  <body>
-    <?php echo $this->layout()->content; ?>
-  </body>
+        <?php echo $this->headLink(); ?>
+        <?php echo $this->headScript(); ?>
+
+        <script>
+                !function($){
+                $(function(){
+                    $('#myCarousel').carousel()
+                })
+            }(window.jQuery)
+        </script>
+        <style type="text/css">
+
+            /*            Global Styles*/
+
+
+            /*            body{
+                            padding-bottom: 40px;
+                            color: #5a5a5a;
+            
+                        }
+                        
+                        
+            
+                        For Navbar
+            
+                        .navbar-wrapper{
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            right: 0;
+                            z-index: 10;
+                            margin-top: 20px;
+                            margin-bottom: -90px;
+                        }
+            
+                        .navbar-wrapper .navbar{
+            
+                        }
+            
+                        .navbar .navbar-inner{
+                            border: 0;
+                            -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.5);
+                            -moz-box-shadow: 0 2px 10px rgba(0,0,0,.5);
+                            box-shadow: 0 2px 10px rgba(0,0,0,.5);
+                        }
+            
+                        .navbar .brand{
+                            padding: 14px 20px 16px;
+                            font-size: 16px;
+                            font-weight: bold;
+                            text-shadow: 0 -1px 0 rgba(0,0,0,.5);
+                        }
+            
+                        .navbar .nav > li > a{
+                            padding : 15px 20px;
+                        }
+            
+                        .navbar .btn-navbar{
+                            margin-top: 10px;
+                        }
+            
+            
+                                    Carousel base class
+            
+                        .carousel{
+                            margin-bottom: 60px;
+            
+                        }
+            
+                        .carousel .container{
+                            position: relative;
+                            z-index: 9px;
+                        }
+            
+                        .carousel-control{
+                            height: 80px;
+                            margin-top: 0;
+                            font-size: 120px;
+                            background-color: transparent;
+                            text-shadow: 0 1px 1px rgba(0,0,0,.4);
+                            border: 0;
+                        }
+            
+                        .carousel .item{
+                            height: 500px;
+            
+                        }
+            
+                        .carousel img{
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            min-width: 100%;
+                            height: 500px;
+            
+            
+                        }
+            
+                        .carousel-caption{
+                            background-color: transparent;
+                            position: static;
+                            max-width: 550px;
+                            padding: 0 20px;
+                            margin-top: 200px;
+            
+                        }
+            
+                        .carousel-caption h1, 
+                        .carousel-caption .lead{
+                            margin: 0;
+                            line-height: 1.25;
+                            color: #fff;
+                            text-shadow: 0 1px 1px rgba(0,0,0,.1);
+            
+                        }
+            
+                        .carousel-caption .btn{
+                            margin-top: 10px;
+            
+                        }
+            
+                        .marketing .span4{
+                            text-align: center;
+            
+                        }
+            
+                        .marketing h2{
+                            font-weight: normal;
+                        }
+            
+                        .marketing .span4 p{
+                            margin-left: 10px;
+                            margin-right: 10px;
+                        }
+            
+                        .featurette-divider{
+                            margin: 80px 0;
+            
+                        }
+            
+                        .featurette{
+                            padding-top: 120px;
+                            overflow: hidden;
+                        }
+            
+                        .featurette-image{
+                            margin-top: -120px;
+                        }
+            
+                        .featurette-image.pull-right{
+                            margin-left: 40px;
+                        }
+            
+                        .featurette-image.pull-left{
+                            margin-right: 40px;
+                        }
+            
+                        .featurette-heading{
+                            font-size: 50px;
+                            font-weight: 300;
+                            line-height: 1;
+                            letter-spacing: -1px;
+            
+                        }
+            
+                                    Responsive CSS
+            
+                        @media(max-width: 979px){
+                            .container.navbar-inner{
+                                margin-bottom: 0;
+                                width: auto;
+                            }
+                            
+                            .navbar-inner{
+                                border-radius: 0;
+                                margin: -20px 0;
+                            }
+                            
+                            .carousel .item{
+                                height: 500;
+                            }
+                            
+                            .carousel img{
+                                width: auto;
+                                height: 500px;
+                            }
+                            
+                            .featurette{
+                                height: auto;
+                                padding: 0;
+                            }
+                            
+                            .featurette-image.pull-left,
+                            .featurette-image.pull-right{
+                                display: block;
+                                float: none;
+                                max-width: 40%;
+                                margin: 0 auto 20px;
+                                    
+                            }
+            
+                        }
+                        
+                        @media(max-width: 767px){
+                            .navbar-inner{
+                                margin: -20px;
+                                
+                            }
+                            
+                            .carousel {
+                                margin-left: -20px;
+                                margin-right: -20px;
+                            }
+                            
+                            .carousel .container{
+                                
+                            }
+                            
+                            .carousel .item{
+                                height: 300px;
+                            }
+                            .carousel img{
+                                height: 300px;
+                            }
+                            .carousel-caption{
+                                width: 65%;
+                                padding: 0 70px;
+                                margin-top: 100px;
+                            }
+                            
+                            .carousel-caption h1{
+                                font-size: 30px;
+                            }
+                            
+                            .carousel-caption .lead,
+                            .carousel-caption .btn{
+                                font-size: 18px;
+                            }
+                            
+                            .marketing.span4 + .span4{
+                                margin-top: 40px;
+                            }
+                            
+                            .featurette-heading{
+                                font-size: 30px;
+                            }
+                            
+                            .featurette .lead{
+                                font-size: 18px;
+                                line-height: 1.5;
+                            }
+                        }*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            /*            html,body{
+                            height: 100%;
+                        }
+                        
+                        .wrap{
+                            min-height: 100%;
+                            height: auto !important;
+                            height: 100%;
+                            margin: 0 auto 60px;
+                        }
+                        
+                        .push,
+                        .footer{
+                            height: 60px;
+                            
+                        }
+                        
+                        .footer{
+                            background-color: #f5f5f5;
+                            
+                        }
+                        
+                        @media(max-width: 767px){
+                            .footer{
+                                margin-left: -20px;
+                                margin-right: -20px;
+                                padding-left: 20px;
+                                padding-right: 20px;
+                            }
+                        }
+                        
+                        .container{
+                            width: auto;
+                            max-width: 680px;
+                        }
+                        
+                        .container .credit{
+                            margin: 20px 0;
+                        }*/
+
+            /*            body{
+                            padding-top: 40px;
+                            padding-bottom: 40px;
+                            background-color: #f5f5f5;
+                        }*/
+
+            /*        .container-narrow{
+                        margin: 0 auto;
+                        max-width: 700px
+                    }
+                    
+                    .container-narrow > hr{
+                        margin: 30px 0;
+                    }
+                    
+                    .jumbotron{
+                        margin: 60px 0;
+                        text-align: center;
+                    }
+                    .jumbotron h1 {
+                        font-size: 72px;
+                        line-height: 1;
+                    }
+                    
+                    .jumbotron .btn{
+                        font-size: 21px;
+                        padding: 14px 24px;
+                        
+                    }
+                    
+                    .marketing{
+                        margin: 60px 0;
+                        
+                    }
+                    
+                    .marketing p + h4{
+                        margin-top: 28px;
+                    }*/
+
+            /*            .form-signin{
+                            max-width: 300px;
+                            padding: 19px 29px 29px;
+                            margin: 0 auto 20px;
+                            background-color: #fff;
+                            border: 1 solid #e5e5e5;
+                            
+                            -webkit-border-radius: 5px;
+                            -moz-border-radius: 5px;
+                            border-radius: 5px;
+                            
+                            -webkit-box-shadow: 0 1px 2px rgba(0,0,0.05);
+                            -moz-box-shadow: 0 1px 2px rgba(0,0,0.05);
+                            box-shadow: 0 1px 2px rgba(0,0,0.05);
+            
+                        }
+                        .form-signin .form-signin-heading, form-signin .checkbox{
+                            margin-bottom: 10px;
+                        }
+                        
+                        .form-signin input[type="text"],
+                        .form-signin input[type="password"]{
+                            font-size: 16px;
+                            height: auto;
+                            margin-bottom: 15px;
+                            padding: 7px 9px;
+                        }*/
+        </style>
+        
+
+        <title></title>
+    </head>
+    <body data-spy="scroll" data-target=".bs-docs-sidebar" data-twttr-rendered="true">
+        <?php echo $this->layout()->content; ?>
+    </body>
 </html>
