--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,4 +1,5 @@
-        
+
+<?php echo '<pre>' . print_r($this->event->toArray(), true) . '</pre>' ?>
 <div class="main row-fluid">
     <div class="span8">
         <div id="highlight" class="carousel slide">
@@ -17,14 +18,26 @@
         <div class="inner">
             <h4>Berita Terbaru</h4>
             <ul class="news-list">
-                <li><a href="#">Festival Paduan Angklung ITB XII</a></li>
-                <li><a href="#">Study Tour TIK SMKN 4 Bandung</a></li>
-                <li><a href="#">Pengembangan Sistem Informasi Terintegrasi</a></li>
-                <li><a href="#">Renovasi ulang gedung sekolah</a></li>
-                <li><a href="#">Tutorial dan pengenalan Zend Framework</a></li>
-                <li><a href="#">Masjid SMK Negeri 4 Bandung Belum siap dipakai</a></li>
-                <li><a href="#">Siswa mengeluhkan tidak adanya air untuk wudhu</a></li>
-                <li><a href="#">Suasana pada saat siswa disibukan Tugas Akhir</a></li>
+                <?php
+//                foreach ($this->news as $news) {
+//                    echo '<li><a href="#">'.$news['title'].'</a></li>';
+//                }
+                
+                
+                ?>
+                
+                <?php foreach($this->news as $news): ?>
+                <li><a href="#"><?php echo $news->title; ?></a></li>
+                <?php endforeach; ?>
+                
+                <!--                <li><a href="#">Festival Paduan Angklung ITB XII</a></li>
+                                <li><a href="#">Study Tour TIK SMKN 4 Bandung</a></li>
+                                <li><a href="#">Pengembangan Sistem Informasi Terintegrasi</a></li>
+                                <li><a href="#">Renovasi ulang gedung sekolah</a></li>
+                                <li><a href="#">Tutorial dan pengenalan Zend Framework</a></li>
+                                <li><a href="#">Masjid SMK Negeri 4 Bandung Belum siap dipakai</a></li>
+                                <li><a href="#">Siswa mengeluhkan tidak adanya air untuk wudhu</a></li>
+                                <li><a href="#">Suasana pada saat siswa disibukan Tugas Akhir</a></li>-->
             </ul>
         </div>
     </div>
@@ -158,28 +171,7 @@
             <br />
 
             <h4><i class="icon-rss"></i>&nbsp; Rubrik Edukasi</h4>
-            <ul class="unstyled">
-                <?php $feed = Zend_Feed_Reader::import('http://www.kompas.com/getrss/edukasi'); ?>
-                <?php foreach ($feed as $index => $news): ?>
-                    <?php if ($index < 5): ?>
-                        <li>
-                            <h5>
-                                <a href="<?php echo $news->getLink(); ?>" target="_blank">
-                                    <?php echo $news->getTitle(); ?>
-                                </a>
-                            </h5>
-                            <?php echo $news->getDescription(); ?>
-                            <div class="clearfix"></div>
-                            <?php if ($index != 4): ?>
-                                <hr />
-                            <?php endif; ?>
-                        </li>
-                    <?php else: ?>
-                        <!--we only display 5 latest news-->
-                    <?php endif; ?>
 
-                <?php endforeach; ?>
-            </ul>
             <br />
             <br />
             <br />
@@ -187,7 +179,7 @@
     </div>
     <div class="sidebar span4 well">
         <?php
-                echo $this->render('sidebar.phtml');
-                ?>
+        echo $this->render('sidebar.phtml');
+        ?>
     </div>
 </div>
